bonus/confs/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
    spec:
      containers:
      - name: playground
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: playground
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: playground
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
